--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.1021.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1021.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
     "aws-cdk-lib": "2.205.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "express": "^5.1.0",
+    "serverless-http": "^3.2.0"
   }
 }
