--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.848.0",
     "aws-cdk-lib": "2.205.0",
     "constructs": "^10.0.0",
     "express": "^5.1.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "zod": "^4.0.5"
   }
 }
