--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws-cdk-lib": "2.205.0",
     "constructs": "^10.0.0",
     "express": "^5.1.0",
+    "nanoid": "^5.1.5",
     "serverless-http": "^3.2.0",
     "zod": "^4.0.5"
   }
